syntax = "proto3";
package Sqrt;

message SqrtRequest{
  int32 number=1;
}
message SqrtResponse{
  double sqrt=1;
}
service SqrtService{
  rpc Sqrt (SqrtRequest)  returns (SqrtResponse){} 
}